consolidates user/best models

--- a/public/views/user.html
+++ b/public/views/user.html
@@ -1,5 +1,7 @@
 <!-- public/views/user.html -->
 <body ng-app="app">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
 <div ng-controller="UserController" >
     <form>
         <input type="text" name="name" ng-model="myForm.name"> First name <br/>
