--- a/public/views/user.html
+++ b/public/views/user.html
@@ -1,6 +1,6 @@
 <!-- public/views/user.html -->
 <body ng-app="app">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
 
     <script src="js/app.js"></script>
