--- a/public/views/user.html
+++ b/public/views/user.html
@@ -1,11 +1,12 @@
 <!-- public/views/user.html -->
 <body ng-app="app">
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
 
-    <script src="js/app.js"></script>
     <script src="js/services/UserService.js"></script>
     <script src="js/controllers/UserCtrl.js"></script>
+    <script src="js/appRoutes.js"></script>
+    <script src="js/app.js"></script>
 
 <div>
     <form ng-controller="UserController as user" ng-submit="user.myForm.submitTheForm(newUser)">
