--- a/public/views/best.html
+++ b/public/views/best.html
@@ -1,26 +1,22 @@
-<!-- public/views/best.html -->
 <body ng-app="app">
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
-<div ng-controller="BestController" >
-    <form>
-        <input type="text" name="name" ng-model="myForm.name"> Name <br/>
-        <input type="text" name="lat"  ng-model="myForm.lat"> Latitude <br/>
-        <input type="text" name="lon"  ng-model="myForm.lon"> Longitude <br/>
-        <input type="text" name="address"  ng-model="myForm.address"> Address <br/>
-        <!-- <input type="hidden" name="user"  ng-model="myForm.user"><br/> --><!--  should pull user from params -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+
+    <script src="js/services/BestService.js"></script>
+    <script src="js/controllers/BestCtrl.js"></script>
+    <script src="js/appRoutes.js"></script>
+    <script src="js/app.js"></script>
+
+<div>
+    <form name="myBestForm" ng-controller="BestController as best" ng-submit="best.myBestForm.submitTheBestForm(myBestForm)">
+        <input type="text" name="name" ng-model="best.myBestForm.name"> Name <br/>
+        <input type="text" name="lat"  ng-model="best.myBestForm.lat"> Latitude <br/>
+        <input type="text" name="lon"  ng-model="best.myBestForm.lon"> Longitude <br/>
+        <input type="text" name="address"  ng-model="best.myBestForm.address"> Address <br/>
+        <!-- <input type="hidden" name="user"  ng-model="best.myBestForm.user"><br/> --><!--  should pull user from params -->
+        <input type="submit" id="submit" value="Submit" />
     </form>
- <button ng-click="myForm.submitTheForm()">Submit Form</button>
+
 </div>
-<script>
-  angular.module("app", [])
-    .controller("BestController", function($scope) {
-      $scope.myForm = {};
-      $scope.myForm.name = "Jakob";
-      $scope.myForm.lat  = "41.099";
-      $scope.myForm.lon  = "-71.009";
-      $scope.myForm.address  = "address";
-      $scope.myForm.user  = "id";
-    });
-</script>
+
 </body>
