--- a/public/views/best.html
+++ b/public/views/best.html
@@ -13,7 +13,7 @@
         <input type="text" name="lat"  ng-model="best.myBestForm.lat"> Latitude <br/>
         <input type="text" name="lon"  ng-model="best.myBestForm.lon"> Longitude <br/>
         <input type="text" name="address"  ng-model="best.myBestForm.address"> Address <br/>
-        <!-- <input type="hidden" name="user"  ng-model="best.myBestForm.user"><br/> --><!--  should pull user from params -->
+        <!-- <input type="hidden" name="user"  ng-model="best.myBestForm.user"><br/> --><!--  TODO:should pull user from params/sessions -->
         <input type="submit" id="submit" value="Submit" />
     </form>
 
