--- a/public/views/user.html
+++ b/public/views/user.html
@@ -5,6 +5,8 @@
 
     <script src="js/services/UserService.js"></script>
     <script src="js/controllers/UserCtrl.js"></script>
+    <script src="js/services/BestService.js"></script>
+    <script src="js/controllers/BestCtrl.js"></script>
     <script src="js/appRoutes.js"></script>
     <script src="js/app.js"></script>
 
