--- a/public/views/index.html
+++ b/public/views/index.html
@@ -14,14 +14,16 @@
     <script src="js/app.js"></script>
 <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet' />
-<!-- <link href="public/style.css" rel="stylesheet" type="text/css"> -->
+<link href="./style.css" rel="stylesheet" type="text/css">
 <style>
   body { margin:0; padding:0; }
   #map { position:absolute; top:0; bottom:0; width:100%; }
 </style>
 </head>
 <body>
-  <div id="catToggle"></div>
+  <div id="catToggle" class="overlay">
+
+  </div>
 <div id='map'></div>
 
 <!-- jQuery is required for this example. -->
