--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,14 @@
 #catToggle{
 
 }
+
+.overlay{
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 25%;
+  height: 15%;
+  z-index: 10;
+  background-color: #FFE7B8;
+  opacity: .8;
+}
