--- a/public/views/index.html
+++ b/public/views/index.html
@@ -11,6 +11,7 @@
     <script src="js/services/UserService.js"></script>
     <script src="js/controllers/UserCtrl.js"></script>
     <script src="js/appRoutes.js"></script>
+    <script src="./routes.js"></script>
     <script src="js/app.js"></script>
 <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet' />
@@ -148,7 +149,8 @@ var API_ENDPOINT = 'https://api.foursquare.com/v2/venues/search' +
         ',' + map.getCenter().lng), function(result, status) {
 
     if (status !== 'success') return alert('Request to Foursquare failed');
-
+    // make global so we can access it on click
+    venues = result.response.venues;
     // Transform each venue result into a marker on the map.
     for (var i = 0; i < result.response.venues.length; i++) {
       var venue = result.response.venues[i];
@@ -161,13 +163,27 @@ var API_ENDPOINT = 'https://api.foursquare.com/v2/venues/search' +
             'marker-size': 'medium'
           })
         })
-      .bindPopup('<strong><a href="https://foursquare.com/v/' + venue.id + '">' +
-        venue.name + "</a></strong><br/><button id='addBest' class='" + venue.name + "'>Add Best</button>")
+      .bindPopup(
+        '<strong><a href="https://foursquare.com/v/' + venue.id + '">' +
+        venue.name +
+        "</a></strong><br/><button class='addBest' data-venue_id='" + i + "' " + " class='" + venue.name + "'>Add Best</button>")
         .addTo(searchAll);
     }
 });
-  $("#addBest").on('click', function(){
-        console.log('clicked!');
+  $("#map").on('click', '.addBest', function(){
+    // how do i get the venue information
+    // for the particular button clicked on
+    console.log('clicked!', this);
+    var number = $(this).data().venue_id;
+    console.log(venues[number]);
+    var newBest = {name: venues[number].name,
+      lat: venues[number].location.lat,
+      lon: venues[number].location.lon,
+      address: venues[number].location.address,
+      category: 'category', //FIXME hardcoded
+      user: "544e939a59630d151c7b59d4"
+    };
+    app.post(newBest);
   });
 </script>
 </body>
