adds layer div with options drop down

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -20,8 +20,10 @@
 
 </head>
 <body>
-  <div id="catToggle" class="overlay">
-
+  <div id="catToggle" class="overlay" ng-controller="LayerController">
+<select ng-model="theCategories" ng-options="category.name for category in categories">
+<option value=""> Pick a Category </option>
+</select>
   </div>
 <div id='map'></div>
 
