--- a/public/views/index.html
+++ b/public/views/index.html
@@ -21,9 +21,10 @@
 </head>
 <body>
   <div id="catToggle" class="overlay" ng-app="LayerCtrl" ng-controller="LayerController">
-<span>
-    <select ng-model="myLayers" ng-options="layer.name for layer in layers">
-      <option value=""> Pick a Category </option>
+  <span>
+
+    <select id="catSelector" ng-model="myLayers" ng-options="layer.name for layer in layers" >
+      <option value=" <%= myLayers.name %>" ng-model="myLayers" ng-click="change(value);"> All</option>
     </select>
   </span>
   </div>
@@ -45,28 +46,56 @@ map.attributionControl
 // Otherwise they can be cycled or deactivated with zero notice.
 var CLIENT_ID = 'EDQQDZUP4CDNAVQTBA40QGR5FC5WPEASPLT5RX1B5XFOAGX5';
 var CLIENT_SECRET = 'U4MOAXGON03440H1RK0ZG1NUF11DT3TY24FQXPARVGGBOS4T';
-var category = "coffee";
+var searchWord = 'coffee';
 // https://developer.foursquare.com/start/search
 var API_ENDPOINT = 'https://api.foursquare.com/v2/venues/search' +
   '?client_id=CLIENT_ID' +
   '&client_secret=CLIENT_SECRET' +
   '&v=20130815' +
   '&ll=LATLON' +
-  '&query='+ category +
+  '&query='+ searchWord +
   '&callback=?';
 
 
 //////encapsulate so each layer is toggled on and off via front end
 
-// loads all bests
-var allBests = L.layerGroup().addTo(map);
+// // loads all bests
+// var allBests = L.layerGroup().addTo(map);
+// $.get('/api/bests',  function(req, res) {
+//   console.log(req);
+//   for (var i = 0; i < req.length; i++) {
+//     var venue = req[i].name;
+//     var latlng = L.latLng(req[i].lat, req[i].lon);
+//     var address = req[i].address;
+//     var marker = L.marker(latlng, {
+//           icon: L.mapbox.marker.icon({
+//             'marker-color': '#F9AC6D',
+//             'marker-symbol': 'restaurant',
+//             'marker-size': 'medium'
+//           })
+//         })
+//       .bindPopup(venue +'<br/>' + address)
+//         .addTo(allBests);
+//   }
+// });
+
+//loads bests of one category
+$('#catSelector').change(function (newCat){
+      console.log(newCat.currentTarget.value);
+      var newCat = newCat.currentTarget.value;
+      console.log(newCat);
+var oneCategory = L.layerGroup().addTo(map);
 $.get('/api/bests',  function(req, res) {
   console.log(req);
   for (var i = 0; i < req.length; i++) {
-    var venue = req[i].name;
-    var latlng = L.latLng(req[i].lat, req[i].lon);
-    var address = req[i].address;
-    var marker = L.marker(latlng, {
+    console.log(req[i].category_id);
+    console.log(newCat);
+    if (req[i].category_id == newCat) {
+      console.log(req[i].category);
+      var venue = req[i].name;
+      var latlng = L.latLng(req[i].lat, req[i].lon);
+      var address = req[i].address;
+      var marker = L.marker(latlng, {
           icon: L.mapbox.marker.icon({
             'marker-color': '#F9AC6D',
             'marker-symbol': 'restaurant',
@@ -74,31 +103,10 @@ $.get('/api/bests',  function(req, res) {
           })
         })
       .bindPopup(venue +'<br/>' + address)
-        .addTo(allBests);
-  }
-});
-
-//loads bests of one category
-
-var oneCategory = L.layerGroup().addTo(map);
-$.get('/api/bests',  function(req, res) {
-  console.log(req);
-  for (var i = 0; i < req.length; i++) {
-    if (req[i].category === "Coffee") { //hardcoded FIXME
-    var venue = req[i].name;
-    var latlng = L.latLng(req[i].lat, req[i].lon);
-    var address = req[i].address;
-    var marker = L.marker(latlng, {
-          icon: L.mapbox.marker.icon({
-            'marker-color': '#BE9A6B',
-            'marker-symbol': 'cafe',
-            'marker-size': 'medium'
-          })
-        })
-      .bindPopup(venue +'<br/>' + address)
         .addTo(oneCategory);
       }
   }
+});
 });
 
 
@@ -133,61 +141,61 @@ $.get('/api/bests',  function(req, res) {
 
 // });
 ///user search with keyword to add bests
-var keyword = 'Van leeuwen';
-var searchAll = L.layerGroup().addTo(map);
-var API_ENDPOINT = 'https://api.foursquare.com/v2/venues/search' +
-  '?client_id=CLIENT_ID' +
-  '&client_secret=CLIENT_SECRET' +
-  '&v=20130815' +
-  '&ll=LATLON' +
-  '&query='+ keyword +
-  '&limit=7'
-  '&callback=?';
+// var keyword = 'Van leeuwen';
+// var searchAll = L.layerGroup().addTo(map);
+// var API_ENDPOINT = 'https://api.foursquare.com/v2/venues/search' +
+//   '?client_id=CLIENT_ID' +
+//   '&client_secret=CLIENT_SECRET' +
+//   '&v=20130815' +
+//   '&ll=LATLON' +
+//   '&query='+ keyword +
+//   '&limit=7'
+//   '&callback=?';
 
-  $.getJSON(API_ENDPOINT
-    .replace('CLIENT_ID', CLIENT_ID)
-    .replace('CLIENT_SECRET', CLIENT_SECRET)
-    .replace('LATLON', map.getCenter().lat +
-        ',' + map.getCenter().lng), function(result, status) {
+//   $.getJSON(API_ENDPOINT
+//     .replace('CLIENT_ID', CLIENT_ID)
+//     .replace('CLIENT_SECRET', CLIENT_SECRET)
+//     .replace('LATLON', map.getCenter().lat +
+//         ',' + map.getCenter().lng), function(result, status) {
 
-    if (status !== 'success') return alert('Request to Foursquare failed');
-    // make global so we can access it on click
-    venues = result.response.venues;
-    // Transform each venue result into a marker on the map.
-    for (var i = 0; i < result.response.venues.length; i++) {
-      var venue = result.response.venues[i];
-      console.log(venue)
-      var latlng = L.latLng(venue.location.lat, venue.location.lng);
-      var marker = L.marker(latlng, {
-          icon: L.mapbox.marker.icon({
-            'marker-color': '#F9AC6D',
-            'marker-symbol': 'restaurant',
-            'marker-size': 'medium'
-          })
-        })
-      .bindPopup(
-        '<strong><a href="https://foursquare.com/v/' + venue.id + '">' +
-        venue.name +
-        "</a></strong><br/><button class='addBest' data-venue_id='" + i + "' " + " class='" + venue.name + "'>Add Best</button>")
-        .addTo(searchAll);
-    }
-});
-  $("#map").on('click', '.addBest', function(){
-    // how do i get the venue information
-    // for the particular button clicked on
-    console.log('clicked!', this);
-    var number = $(this).data().venue_id;
-    console.log(venues[number]);
-    //FIXME add posting code
-    // var newBest = {name: venues[number].name,
-    //   lat: venues[number].location.lat,
-    //   lon: venues[number].location.lon,
-    //   address: venues[number].location.address,
-    //   category: 'category', //FIXME hardcoded
-    //   user: "544e939a59630d151c7b59d4"
-    // };
-    // app.post(newBest);
-  });
+//     if (status !== 'success') return alert('Request to Foursquare failed');
+//     // make global so we can access it on click
+//     venues = result.response.venues;
+//     // Transform each venue result into a marker on the map.
+//     for (var i = 0; i < result.response.venues.length; i++) {
+//       var venue = result.response.venues[i];
+//       console.log(venue)
+//       var latlng = L.latLng(venue.location.lat, venue.location.lng);
+//       var marker = L.marker(latlng, {
+//           icon: L.mapbox.marker.icon({
+//             'marker-color': '#F9AC6D',
+//             'marker-symbol': 'restaurant',
+//             'marker-size': 'medium'
+//           })
+//         })
+//       .bindPopup(
+//         '<strong><a href="https://foursquare.com/v/' + venue.id + '">' +
+//         venue.name +
+//         "</a></strong><br/><button class='addBest' data-venue_id='" + i + "' " + " class='" + venue.name + "'>Add Best</button>")
+//         .addTo(searchAll);
+//     }
+// });
+//   $("#map").on('click', '.addBest', function(){
+//     // how do i get the venue information
+//     // for the particular button clicked on
+//     console.log('clicked!', this);
+//     var number = $(this).data().venue_id;
+//     console.log(venues[number]);
+//     //FIXME add posting code
+//     // var newBest = {name: venues[number].name,
+//     //   lat: venues[number].location.lat,
+//     //   lon: venues[number].location.lon,
+//     //   address: venues[number].location.address,
+//     //   category: 'category', //FIXME hardcoded
+//     //   user: "544e939a59630d151c7b59d4"
+//     // };
+//     // app.post(newBest);
+//   });
 </script>
 </body>
 </html>
